# Diamond-DNA

./: .gitignore  README.md  pyproject.toml
application/frontend/: package-lock.json  package.json
data-pipeline/ingestion/: daily_statcast.py  lambda_handler.py  statcast_backfill.py
docker/bronze/: Dockerfile  requirements.txt
docker/features/: Dockerfile  requirements.txt
docker/ingestion/: Dockerfile  requirements.txt
docker/processing/: Dockerfile
docker/silver-batch/: Dockerfile  requirements.txt
docker/silver-lambda/: Dockerfile  requirements.txt
docker/statcast-by-player/: Dockerfile
docker/statcast-ingestion/: Dockerfile  requirements.txt
experimentation/: loading_data.ipynb
infrastructure/terraform/: .gitignore  SECRETS_MANAGER.md  locals.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
notebooks/: cluster_assignments.ipynb  clustering_gmm_experimentation.ipynb  clustering_kmeans_experimentation.ipynb  loading_data.ipynb
src/: __init__.py  s3_parquet.py
src/bronze/: __init__.py  defence_ingestion.py  statcast_ingestion.py  statcast_running_ingestion.py
src/features/: archetype_feature_defs.py  archetype_feature_schema.md  bronze_to_silver_features.py  build_player_year_archetype_features.py  (+2 more)
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_archetype_clustering.py  test_archetype_finetune.py  test_gold_preprocessing.py  test_lake_paths.py  test_listing_moto.py  test_player_similarity.py  test_player_year_features_from_df.py  test_silver_player_names.py
(+115 files in other folders)
