[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "diamond-dna"
version = "0.1.0"
description = "Diamond-DNA data lake and feature pipelines"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "boto3>=1.28",
    "requests>=2.28",
    "pybaseball>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "moto[s3]>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
